# synthesize-text2audio

./: .editorconfig  LICENSE  README.md  init.sh  pyproject.toml
src/: app.py  config.py  constants.py  model.py  process.py  schema.py
static/: styles.css
templates/: index.html
